updates mid February 2019

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -94,16 +94,20 @@ bookmarks, colorlinks, breaklinks,
 \textsc{BA, MA, MSc, PhD}\\[0.9cm]
 \emph{Associate Professor in Music Technology}\\
 Department of Music\\
-NTNU (Norwegian University of Science and Technology)\\
+Norwegian University of Science and Technology (NTNU)\\
 7491 Trondheim (Norway)\\[.2cm]
 %\textsc{phone}: \texttt{(+44) (0) 737-879-6645}\\
 \textsc{email}: \href{mailto:anna.xambo@ntnu.no}{anna.xambo@ntnu.no}\\
 \textsc{webpage}: \href{http://annaxambo.me/}{annaxambo.me}\\ 
 
 %%\hrule
-\section*{Current Position}
-\emph{Associate Professor in Music Technology}, Department of Music, Norwegian University of Science and Technology (NTNU).\\
-\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS), Queen Mary University of London (QMUL).
+\section*{Current Academic Roles}
+---\emph{Associate Professor in Music Technology}, Department of Music, NTNU.\\
+---\emph{Master of Music, Communication and Technology (MCT) Programme Study Leader}, Department of Music, NTNU.\\
+---\emph{MCT Programme Council Leader}, Department of Music, NTNU.\\
+---\emph{Chair of the Women Nordic Music Technology} (WoNoMute) organization, Department of Music, NTNU.\\
+---\emph{Conference Chair of the Web Audio Conference 2019}, Department of Music, NTNU.\\
+---\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS), Queen Mary University of London (QMUL).\\
 
 %%\hrule
 \section*{Areas of Interest}
@@ -149,7 +153,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \section*{Teaching Education}
 \noindent
 \years{2018--present}\textsc{Learning and Teaching in Higher Education (module II)}. Instructors: Alison Gilmour, Maren Thom. QMUL. London.\\
-\years{2018--present}\textsc{Learning and Teaching in Higher Education (module I)}. Instructors: Emma Kennedy. QMUL. London.\\
+\years{2018--present}\textsc{Learning and Teaching in Higher Education (module I)}. Instructor: Emma Kennedy. QMUL. London.\\
 \years{2018}\textsc{Women into Leadership}. Instructor: Lorraine Smith. QMUL. London.\\
 \years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars}. Instructor: Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
 
@@ -172,7 +176,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %{\small Web interface design of different portals of the Catalan TV corporation (tv3.cat, catradio.cat, ritmes.net, among others). Web interface design of the sitcom Lo Cartanyà (locartanya.com). Mobile design of the prototype 3alacarta.}\\
 \years{05/2001--08/2002}\textsc{Web Designer \&  Motion Graphic Designer}. TerraNetworks | UranoFilms. Barcelona. \\
 %{\small Web interface design and flash design of AV internet content about electronic music and digital culture.}\\
-\years{04/2000--05/2001}\textsc{Web Designer \&  Motion Graphic Designer}. MediaPark | ParkNet, Barcelona. \\[1.3cm]%hack
+\years{04/2000--05/2001}\textsc{Web Designer \&  Motion Graphic Designer}. MediaPark | ParkNet, Barcelona. \\%[1.3cm]%hack
 %{\small Flash design of animations games for the Internet soccer portal futvol.com.} \\[1.1cm]
 
 %\hrule
@@ -180,11 +184,11 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \noindent
 
 \subsection*{Research Grants, Honors \& Awards}
-\years{2018--2021} \textsc{Startup grant (Startpakke)} (250,000 NOK), awarded to raise the number of women in male dominated areas. NTNU, Trondheim, Norway.\\
+\years{2018--2021} \textsc{3-year Startup Grant (Startpakke)} (250,000 NOK), awarded to help early career women academics in male dominated fields. NTNU, Trondheim, Norway.\\
 \years{2017} NCWIT Engagement Excellence Award (\$5,000 cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
-\years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
-\years{10/2010--07/2013}\textsc{Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
-\years{03/2010--06/2010}\textsc{Fully-Funded OU Visiting Research Studentship}. The Open University, Milton Keynes, UK.
+\years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded conference fee waiver to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
+\years{10/2010--07/2013}\textsc{3-year Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
+\years{03/2010--06/2010}\textsc{4-month Fully-Funded OU Visiting Research Studentship}. The Open University, Milton Keynes, UK.
 
 \subsection*{Artistic Grants, Honors \& Awards}
 \years{05/2004}\textsc{First prize award Minima Festival}. Gandía, Spain. \\
@@ -218,33 +222,33 @@ Total Dollar Amount: \$2,517,690.00
 
 \subsection*{Fundraiser}
 
-\years{2017--2018}\textsc{Female Laptop Orchestra + Women in Music Tech seminar and concert at SARC} \\
+\years{2017--2018}\textsc{Female Laptop Orchestra + WoNoMute +YSWN + Sonora: seminar and concert at SARC} \\
 Role: Co-organizer and participant of the event. \\
 Total Fundraised British Pound Amount: \textsterling2,000\\[.1cm]
 \years{05/2016--05/2017}\textsc{Women in Music Tech} \\
 Role: Co-Founder \& Co-Chair of the organization. \\
 Total Fundraised Dollar Amount: \$11,450\\[.1cm]
-\years{08/2016--05/2017}\emph{2016-2017 Academic Year}\\
-Funding body: School of Music, Georgia Tech. \\
-Total Dollar Amount: \$2,500\\[.1cm]
-\years{08/2016--11/2016}\emph{Fall 2016 Concert Event}\\
-Funding body: College of Design, Georgia Tech. \\
-Total Dollar Amount: \$2,000\\[.1cm]
-Funding body: ADVANCE program, Georgia Tech. \\
-Total Dollar Amount: \$1,000\\[.1cm]
-Funding body: Women's Resource Center, Georgia Tech. \\
-Total Dollar Amount: \$250\\[.1cm]
-\years{01/2017--05/2017}\emph{Spring 2017 Actions}\\
-Funding body: School of Music, Georgia Tech. \\
-Total Dollar Amount: \$2,400\\[.1cm]
-Funding body: College of Design Council Diversity, Georgia Tech. \\
-Total Dollar Amount: \$1,500\\[.1cm]
-Funding body: ADVANCE Program, Georgia Tech. \\
-Total Dollar Amount: \$1,000\\[.1cm]
-Funding body: Women's Resource Center, Georgia Tech. \\
-Total Dollar Amount: \$500\\[.1cm]
-Funding body: Digital Media Program, School of Literature, Media, and Communication, Georgia Tech. \\
-Total Dollar Amount: \$300
+%\years{08/2016--05/2017}\emph{2016-2017 Academic Year}\\
+%Funding body: School of Music, Georgia Tech. \\
+%Total Dollar Amount: \$2,500\\[.1cm]
+%\years{08/2016--11/2016}\emph{Fall 2016 Concert Event}\\
+%Funding body: College of Design, Georgia Tech. \\
+%Total Dollar Amount: \$2,000\\[.1cm]
+%Funding body: ADVANCE program, Georgia Tech. \\
+%Total Dollar Amount: \$1,000\\[.1cm]
+%Funding body: Women's Resource Center, Georgia Tech. \\
+%Total Dollar Amount: \$250\\[.1cm]
+%\years{01/2017--05/2017}\emph{Spring 2017 Actions}\\
+%Funding body: School of Music, Georgia Tech. \\
+%Total Dollar Amount: \$2,400\\[.1cm]
+%Funding body: College of Design Council Diversity, Georgia Tech. \\
+%Total Dollar Amount: \$1,500\\[.1cm]
+%Funding body: ADVANCE Program, Georgia Tech. \\
+%Total Dollar Amount: \$1,000\\[.1cm]
+%Funding body: Women's Resource Center, Georgia Tech. \\
+%Total Dollar Amount: \$500\\[.1cm]
+%Funding body: Digital Media Program, School of Literature, Media, and Communication, Georgia Tech. \\
+%Total Dollar Amount: \$300
 
 \subsection*{Creator | Director}
 
@@ -288,6 +292,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Journal Articles}
 \noindent
+\years{2018c}\textbf{Xambó, A.}, Lerch, A. and Freeman, J. (2018). “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018.\\
 \years{2018b}Roma, G. and \textbf{Xambó, A.} and Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
 \years{2018a}\textbf{Xambó, A.}, Roma, G., Shah, P., Tsuchiya, T., Freeman, J. and Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
 \years{2017c}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2017). “Exploring Social Interaction with a Tangible Music Interface". \emph{Interacting with Computers}, 29(2), pp. 248--270.\\
@@ -427,7 +432,7 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2018a} Allik, A., \textbf{Xambó, A.} (April 7--8, 2018). “Collaborative Network Music". \emph{Rewire 2018}, The Hague, The Netherlands. Organized by Music Hackspace. Funded by Rewire.\\
 \years{2017} \textbf{Xambó, A.} (October 14, 2017). “Huddersfield Girl Geeks: Audiovisual Creative Coding with P5.js". \emph{Kirklees Libraries}, Huddersfield, UK. Funded by Google.\\
 \years{2013} \textbf{Xambó, A.} (May 2, 2013). “Introduction to SuperCollider". \emph{Music Computing Meeting}, OU. Milton Keynes, UK.\\
-\years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). “Tangible Musical Interfaces with SuperCollider". \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.
+\years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). “Tangible Musical Interfaces with SuperCollider". \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.\\[1.2cm]%hack
 
 \subsection*{Webinars}
 \noindent
@@ -472,7 +477,7 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2013b}peterMann's selection of \emph{On The Go}'s tracks. (February 3, 2013). RNE Atmósfera.\\
 \years{2013a}peterMann's “og02". (February 2, 2013). Störung Radio 127 on ScannerFM.\\
 \years{2010b}peterMann's “init 10--12". (December 18, 2010). Onda Sonora.\\
-\years{2010a}peterMann's “init 2". (April 12, 2010). Sismógrafo.
+\years{2010a}peterMann's “init 2". (April 12, 2010). Sismógrafo.\\
 
 \section*{Selected Performances}
 \noindent
@@ -587,10 +592,10 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 \subsection*{Graduate Courses}
 \noindent
 
-\years{1/2019}Course: \emph{Sonification and Sound Design} (58 h). \# Students: $\sim$15. \\
+\years{1/2019}Course: \emph{MCT4046 Sonification and Sound Design} (58 h). \# Students: $\sim$11. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction, coordination of guest lectures, and assessment.\\
-\years{1/2019}Course: \emph{Audio Programming} (58 h). \# Students: $\sim$15. \\
+\years{1/2019}Course: \emph{MCT4048 Audio Programming} (58 h). \# Students: $\sim$11. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{10/2018}Course: \emph{Human-Computer Interaction} (8 h). \# Students: $\sim$15. \\
@@ -673,7 +678,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{03/2004--05/2004}
 Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8.\\
 Escola Glòries, Barcelona.\\
-Role: Co-creation of syllabus, creation of content, instruction and assessment.
+Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
 
 \section*{Supervision}
 \noindent
@@ -701,13 +706,13 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Blogging}
 \noindent
 
-\years{09/2018--present}\href{http://wonomute.no}{Women Nordic Music Technology}, the blog of the WoNoMute organization. Creator and Coordinator.\\ 
+\years{09/2018--present}\href{http://wonomute.no}{Women Nordic Music Technology}, the website and blog of the WoNoMute organization. Co-Creator and Coordinator.\\ 
 \years{08/2018--present}\href{https://mct-master.github.io}{MCT master blog}, the blog of the MCT master. Co-Creator and Coordinator.\\ 
-\years{05/2017--present}\href{https://www.audiocommons.org}{Audio Commons}, the blog of the EU-funded project Audio Commons. Editor-in-Chief, Reviewer and Author.\\ 
+\years{05/2017--07/2018}\href{https://www.audiocommons.org}{Audio Commons}, the blog of the EU-funded project Audio Commons. Coordinator, Reviewer and Author.\\ 
 \years{10/2016--present}\href{http://annaxambo.me/blog}{Anna Xambó's Blog}, the blog of my personal website. Creator and Author.\\ 
-\years{05/2016--12/2017}\href{http://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator, Editor, Reviewer and Author.\\ 
-\years{09/2013--08/2014}\href{http://midassblog.wordpress.com}{MIDAS's Blog}, the research blog of the MIDAS project. Co-Creator and Author. \\ 
-\years{01/2010--12/2011} \href{http://postwimp.com}{postWIMP}, a blog on HCI and interaction design. Co-Creator and Author.\\
+\years{05/2016--12/2017}\href{http://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator, Coordinator, Reviewer and Author.\\ 
+\years{09/2013--08/2014}\href{http://midassblog.wordpress.com}{MIDAS's Blog}, the research blog of the MIDAS project. Co-Creator, Coordinator and Author. \\ 
+\years{01/2010--12/2011} \href{http://postwimp.com}{postWIMP}, a blog on HCI and interaction design. Co-Creator, Coordinator and Author.\\
 \years{03/2006--03/2009}\href{http://streetypes.blogspot.com}{streeTypes}, a blog on typography in public spaces. Creator and Author. 
 
 \subsection*{Artistic Collective Projects}
@@ -726,9 +731,17 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \emph{Association for Computing Machinery (ACM)}.\\
 \emph{International Computer Music Association (ICMA)}.
 
+
+\subsection*{Programme Leader}
+\noindent
+
+\years{01/2019--present}\textsc{MCT Programme Study Leader} Department of Music, NTNU.\\
+\years{01/2019--present}\textsc{MCT Programme Council Leader}, Department of Music, NTNU.
+
 \subsection*{Academic Chair / Committee Member / Conference Chair}
 \noindent
 
+\years{2019c}\textsc{Conference Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
 \years{2019b}\textsc{Paper Co-Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
 \years{2019a}\textsc{Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
 \years{2018}\textsc{Programme Committee Member}. \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
@@ -808,7 +821,7 @@ Collaborators: Jason Freeman (coordinator), Gerard Roma.
 \subsection*{Entrepreneurship}
 \noindent
 \years{08/2018--present}\emph{Women Nordic Music Technology (WoNoMute)}, NTNU, Trondheim, Norway. \\
-Co-Founder and Chair of \emph{WoNoMute}, an organization at NTNU that aims to promote and connect the work of women in music tech at local, national and international levels. This includes the organization of a monthly seminar series of talks, the creation of an online archive and generation of related online content to give more visibility to the work of women in music tech.
+Co-Founder and Chair of \emph{WoNoMute}, an organization at NTNU that aims to promote and connect the work of women in music tech at local, national and international levels. This includes the curation and organization of a monthly seminar series of talks, the creation of an online archive and generation of related content to give more visibility to the work of women in music tech.
 \\\years{05/2016--12/2017}\emph{Women in Music Tech}, Atlanta, GA, USA. \\
 Co-Founder and Co-Chair of \emph{Women in Music Tech}, the first student organization at GTCMT that looks into bringing more women into the program of music technology with actions on recruitment, external communication, internal communication, and creating a safe space.\\
 \years{02/2004--06/2010}\emph{Nodular Soft}, Barcelona. \\
