update mid February 2019

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -379,6 +379,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Own Institution}
 \noindent
 
+\years{2019} \textsc{Oral Presenter} together with Jawad, K. and Lesteberg, M.. (January 31, 2019). “Women Nordic Music Technology". \emph{Girls Geek Dinner Trondheim}. Music Technology Department, NTNU, Trondheim, Norway.\\
 \years{2018c} \textsc{Lightning Talk Speaker}. (September 28, 2018). “Challenges and Opportunities of Collaborative Music Live Coding: A Practitioner's Approach". \emph{The Raw and The Cooked, Inter/sections 2018}. Café 1001, London, UK.\\
 \years{2018b} \textsc{Oral Presenter}. (August 13, 2018). “Women in Music Tech: A Case Study". \emph{Oppstartseminar (Institutt for musikk)}. Dokkhuset, Trondheim, Norway.\\
 \years{2018a} \textsc{Oral Presenter}. (August 13, 2018). “A Journey Through My Research and Creative Practice". \emph{Oppstartseminar (Institutt for musikk)}. Dokkhuset, Trondheim, Norway.\\
