small tweak end February 2019

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -107,6 +107,7 @@ Norwegian University of Science and Technology (NTNU)\\
 ---\emph{MCT Programme Council Leader}, Department of Music, NTNU.\\
 ---\emph{Chair of the Women Nordic Music Technology} (WoNoMute) organization, Department of Music, NTNU.\\
 ---\emph{Conference Chair of the Web Audio Conference 2019}, Department of Music, NTNU.\\
+---\emph{Paper Chair of the New Interfaces for Musical Expression Conference 2019}, Department of Music, NTNU.\\
 ---\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS), Queen Mary University of London (QMUL).\\
 
 %%\hrule
@@ -379,7 +380,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Own Institution}
 \noindent
 
-\years{2019} \textsc{Oral Presenter} together with Jawad, K. and Lesteberg, M.. (January 31, 2019). “Women Nordic Music Technology". \emph{Girls Geek Dinner Trondheim}. Music Technology Department, NTNU, Trondheim, Norway.\\
+\years{2019} \textsc{Oral Presenter} together with Jawad, K. and Lesteberg, M.. (January 31, 2019). “Women Nordic Music Technology". \emph{Girls Geek Dinner Trondheim}. Music Technology, NTNU, Trondheim, Norway.\\
 \years{2018c} \textsc{Lightning Talk Speaker}. (September 28, 2018). “Challenges and Opportunities of Collaborative Music Live Coding: A Practitioner's Approach". \emph{The Raw and The Cooked, Inter/sections 2018}. Café 1001, London, UK.\\
 \years{2018b} \textsc{Oral Presenter}. (August 13, 2018). “Women in Music Tech: A Case Study". \emph{Oppstartseminar (Institutt for musikk)}. Dokkhuset, Trondheim, Norway.\\
 \years{2018a} \textsc{Oral Presenter}. (August 13, 2018). “A Journey Through My Research and Creative Practice". \emph{Oppstartseminar (Institutt for musikk)}. Dokkhuset, Trondheim, Norway.\\
@@ -743,7 +744,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \noindent
 
 \years{2019c}\textsc{Conference Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
-\years{2019b}\textsc{Paper Co-Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
+\years{2019b}\textsc{Paper Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
 \years{2019a}\textsc{Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
 \years{2018}\textsc{Programme Committee Member}. \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
 \years{2017c}\textsc{Session Chair}. \emph{Web Audio Conference 2017}. London.\\
