small tweak end February 2019

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -107,7 +107,7 @@ Norwegian University of Science and Technology (NTNU)\\
 ---\emph{MCT Programme Council Leader}, Department of Music, NTNU.\\
 ---\emph{Chair of the Women Nordic Music Technology} (WoNoMute) organization, Department of Music, NTNU.\\
 ---\emph{Conference Chair of the Web Audio Conference 2019}, Department of Music, NTNU.\\
----\emph{Paper Chair of the New Interfaces for Musical Expression Conference 2019}, Department of Music, NTNU.\\
+---\emph{Paper Chair of the New Interfaces for Musical Expression Conference 2019}, Institute of Informatics and the Institute of Arts at Federal University of Rio Grande do Sul, Porto Alegre, Brazil.\\
 ---\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS), Queen Mary University of London (QMUL).\\
 
 %%\hrule
@@ -132,7 +132,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \years{Title}\textbf{Xambó, A.} (2015). \emph{Tabletop Tangible Interfaces for Music Performance: Design and Evaluation}.\\
 \years{Advisors}Dr Robin Laney, Mr Chris Dobbyn and Prof Sergi Jordà.\\
 \years{Examiners}Prof Eduardo Reck Miranda and Dr Janet van der Linden.\\
-\years{Website}\href{http://oro.open.ac.uk/42473/}{http://oro.open.ac.uk/42473/}\\[.3cm]
+\years{Website}\href{http://oro.open.ac.uk/42473/}{http://oro.open.ac.uk/42473/}
 
 %\hrule
 \section*{Music Education}
