minor change brief cv

--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -92,6 +92,8 @@ bookmarks, colorlinks, breaklinks,
 % DOCUMENT
 \begin{document}
 
+\pagenumbering{gobble} % this suppresses page numbering
+
 {\textbf{Anna Xambó}}\\
 Associate Professor in Music Technology, Department of Music, NTNU\\
 \href{http://annaxambo.me/}{annaxambo.me}\\ 
@@ -120,7 +122,7 @@ I have been working since 2000 as interaction designer, web designer and web dev
 
 {\textbf{Research Visits}} at Filmuniversität Babelsberg KONRAD WOLF (2018); University of Strathclyde (2012, 2011); Universitat Pompeu Fabra (2011); and The Open University (2010).\\
 
-{\textbf{Blog Posts}} at Women Nordic Music Technology (2018--present); Audio Commons (2017--2018); Women in Music Tech (2016--2017); Methodological Innovation in Digital Arts and Social Sciences (2013--2014); postWIMP (2010--2011); streetTypes (2006--2009).\\
+{\textbf{Blog Coordinator}} at Women Nordic Music Technology (2018--present); Audio Commons (2017--2018); Women in Music Tech (2016--2017); Methodological Innovation in Digital Arts and Social Sciences (2013--2014); postWIMP (2010--2011); streetTypes (2006--2009).\\
 
 %\vspace{1cm}
 %\vfill{}
