--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -106,8 +106,8 @@ Norwegian University of Science and Technology (NTNU)\\
 ---\emph{Master of Music, Communication and Technology (MCT) Programme Study Leader}, Department of Music, NTNU.\\
 ---\emph{MCT Programme Council Leader}, Department of Music, NTNU.\\
 ---\emph{Chair of the Women Nordic Music Technology} (WoNoMute) organization, Department of Music, NTNU.\\
----\emph{Conference Chair of the Web Audio Conference 2019}, Department of Music, NTNU.\\
----\emph{Paper Chair of the New Interfaces for Musical Expression Conference 2019}, Institute of Informatics and the Institute of Arts at Federal University of Rio Grande do Sul, Porto Alegre, Brazil.\\
+---\emph{General Co-Chair of the Web Audio Conference 2019}, Department of Music, NTNU.\\
+---\emph{Paper Co-Chair of the New Interfaces for Musical Expression Conference 2019}, Institute of Informatics and the Institute of Arts at Federal University of Rio Grande do Sul, Porto Alegre, Brazil.\\
 ---\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS), Queen Mary University of London (QMUL).\\
 
 %%\hrule
@@ -743,8 +743,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Academic Chair / Committee Member / Conference Chair}
 \noindent
 
-\years{2019c}\textsc{Conference Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
-\years{2019b}\textsc{Paper Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
+\years{2019c}\textsc{General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
+\years{2019b}\textsc{Paper Co-Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
 \years{2019a}\textsc{Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
 \years{2018}\textsc{Programme Committee Member}. \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
 \years{2017c}\textsc{Session Chair}. \emph{Web Audio Conference 2017}. London.\\
