--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -116,7 +116,7 @@ I have been working since 2000 as interaction designer, web designer and web dev
 
 {\textbf{Performances}} at International Conference on Live Coding (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); Web Audio Conference (2018, 2017); Cube Fest (2018); New Interfaces for Musical Expression (2018, 2017); Tangible, Embedded, and Embodied Interaction Conference (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); PHONOS (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
 
-{\textbf{Conference Organizer}} for Web Audio Conference (2019, chair; 2017, session chair; 2016, music/artworks chair); New Interfaces for Musical Expression Conference (2019, paper chair); ACM Creativity \& Cognition (2019, programme committee member); ACM Spatial User Interaction (2018, programme committee member); Computational Creativity (2017, local committee member); and International Computer Music Conference (2011, session chair).\\
+{\textbf{Conference Organizer}} for Web Audio Conference (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); New Interfaces for Musical Expression Conference (2019, paper co-chair); ACM Creativity \& Cognition (2019, programme committee member); ACM Spatial User Interaction (2018, programme committee member); Computational Creativity (2017, local committee member); and International Computer Music Conference (2011, session chair).\\
 
 {\textbf{Interviews/Press Coverage}} in Girls Geek Dinner Trondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
 
