updates mid March 2019

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -102,12 +102,13 @@ Norwegian University of Science and Technology (NTNU)\\
 
 %%\hrule
 \section*{Current Academic Roles}
----\emph{Associate Professor in Music Technology}, Department of Music, NTNU.\\
+---\emph{Associate Professor in Music Technology}, Department of Music, NTNU, Trondheim, Norway.\\
 ---\emph{Master of Music, Communication and Technology (MCT) Programme Study Leader}, Department of Music, NTNU.\\
 ---\emph{MCT Programme Council Leader}, Department of Music, NTNU.\\
 ---\emph{Chair of the Women Nordic Music Technology} (WoNoMute) organization, Department of Music, NTNU.\\
 ---\emph{General Co-Chair of the Web Audio Conference 2019}, Department of Music, NTNU.\\
 ---\emph{Paper Co-Chair of the New Interfaces for Musical Expression Conference 2019}, Institute of Informatics and the Institute of Arts at Federal University of Rio Grande do Sul, Porto Alegre, Brazil.\\
+---\emph{Local Committee Member of the International Conference of Live Interfaces 2020}, Department of Music, NTNU.\\
 ---\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS), Queen Mary University of London (QMUL).\\
 
 %%\hrule
@@ -293,7 +294,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Journal Articles}
 \noindent
-\years{2018c}\textbf{Xambó, A.}, Lerch, A. and Freeman, J. (2018). “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018.\\
+\years{2018c}\textbf{Xambó, A.}, Lerch, A. and Freeman, J. (2018). “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018. (in press)\\
 \years{2018b}Roma, G. and \textbf{Xambó, A.} and Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
 \years{2018a}\textbf{Xambó, A.}, Roma, G., Shah, P., Tsuchiya, T., Freeman, J. and Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
 \years{2017c}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2017). “Exploring Social Interaction with a Tangible Music Interface". \emph{Interacting with Computers}, 29(2), pp. 248--270.\\
@@ -594,7 +595,7 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 \subsection*{Graduate Courses}
 \noindent
 
-\years{1/2019}Course: \emph{MCT4046 Sonification and Sound Design} (58 h). \# Students: $\sim$11. \\
+\years{1/2019}Course: \emph{MCT4046 Sonification and Sound Design} (58 h). \# Students: $\sim$10. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction, coordination of guest lectures, and assessment.\\
 \years{1/2019}Course: \emph{MCT4048 Audio Programming} (58 h). \# Students: $\sim$11. \\
@@ -734,7 +735,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \emph{International Computer Music Association (ICMA)}.
 
 
-\subsection*{Programme Leader}
+\subsection*{Academic Programme Leader}
 \noindent
 
 \years{01/2019--present}\textsc{MCT Programme Study Leader} Department of Music, NTNU.\\
@@ -743,6 +744,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Academic Chair / Committee Member / Conference Chair}
 \noindent
 
+\years{2019d}\textsc{Local Committee Member}. \emph{International Conference of Live Interfaces 2020}. Trondheim, Norway.\\ 
 \years{2019c}\textsc{General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
 \years{2019b}\textsc{Paper Co-Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
 \years{2019a}\textsc{Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
