--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -105,7 +105,7 @@ BA, MA, Social and Cultural Anthropology, Universitat de Barcelona, 1996.\\
 
 {\textbf{Employment}}\\
 Associate Professor, NTNU, 2018--present. I am teaching graduate courses in audio programming, human-computer interaction, physical computing and sonification. I am co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--present). I am the Music, Communication and Technology (NTNU/UiO)'s master programme council leader and programme study leader at NTNU. I am a visiting lecturer at Queen Mary University of London.\\
-Previously, I have been a postdoc at Queen Mary University of London (2017--2018). Before that, I was a postdoc at Georgia Tech (2015--2017). Also, I have been co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--2017). From 2013 to 2014, I was a research fellow at the London Knowledge Lab, UCL Institute of Education.
+I have been a postdoc at Queen Mary University of London (2017--2018) and postdoc at Georgia Tech (2015--2017). Also, I have been co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--2017). From 2013 to 2014, I was a research fellow at the London Knowledge Lab, UCL Institute of Education.
 I have been working since 2000 as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies for 10 years (2000--2010) as well as co-founder of my own interactive media studio (2004--2010).\\
 
 {\textbf{Grants/Awards}} from NTNU (2018--2021); Sonic Arts Research Center (2018); NCWIT (2017); National Science Foundation AISL (2016); Women in Music Information Retrieval (2016); The Open University (2010--2013, 2010); Fundació Caixa de Sabadell (2003--2004); and Generalitat de Catalunya (2001--2002, 1998--1999).\\
@@ -116,13 +116,13 @@ I have been working since 2000 as interaction designer, web designer and web dev
 
 {\textbf{Performances}} at International Conference on Live Coding (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); Web Audio Conference (2018, 2017); Cube Fest (2018); New Interfaces for Musical Expression (2018, 2017); Tangible, Embedded, and Embodied Interaction Conference (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); PHONOS (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
 
-{\textbf{Conference Organizer}} for Web Audio Conference (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); New Interfaces for Musical Expression Conference (2019, paper co-chair); ACM Creativity \& Cognition (2019, programme committee member); ACM Spatial User Interaction (2018, programme committee member); Computational Creativity (2017, local committee member); and International Computer Music Conference (2011, session chair).\\
+{\textbf{Conference Organizer}} for Web Audio Conference (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); New Interfaces for Musical Expression Conference (2019, paper co-chair); International Conference of Live Interfaces (2020, local committee member); ACM Creativity \& Cognition (2019, programme committee member); ACM Spatial User Interaction (2018, programme committee member); Computational Creativity (2017, local committee member); and International Computer Music Conference (2011, session chair).\\
 
 {\textbf{Interviews/Press Coverage}} in Girls Geek Dinner Trondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
 
 {\textbf{Research Visits}} at Filmuniversität Babelsberg KONRAD WOLF (2018); University of Strathclyde (2012, 2011); Universitat Pompeu Fabra (2011); and The Open University (2010).\\
 
-{\textbf{Blog Coordinator}} at Women Nordic Music Technology (2018--present); Audio Commons (2017--2018); Women in Music Tech (2016--2017); Methodological Innovation in Digital Arts and Social Sciences (2013--2014); postWIMP (2010--2011); and streetTypes (2006--2009).\\
+{\textbf{Blog Coordinator}} at Women Nordic Music Technology (2018--present); AudioCommons (2017--2018); Women in Music Tech (2016--2017); Methodological Innovation in Digital Arts and Social Sciences (2013--2014); postWIMP (2010--2011); and streetTypes (2006--2009).\\
 
 %\vspace{1cm}
 %\vfill{}
